Upgrade main to ODP 1.3.2 toolchain and fix JDK 21 build/test support